# Monitor_AI_System

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-bench.txt  requirements-gpu.txt  requirements.txt
configs/experiments/: direct_full.json  direct_redacted.json  monitor_then_act.json
configs/models/: qwen25_coder_7b.json
data/fea_bench/curated/: pilot_manifest.json
data/self_bench/pilot/: manifest.json
data/self_bench/tasks/: self_api_001.json  self_blog_001.json  self_cli_001.json  self_dashboard_001.json  (+1 more)
docs/: annotation_guideline.md  benchmark_execution_plan.md  environment_setup.md  real_benchmark_runbook.md  redaction_guideline.md  report_schema.md
scripts/: check_benchmark_runtime.sh  check_external_benchmarks.sh  check_pace_node_capabilities.sh  create_or_update_env.sh  fetch_external_benchmarks.sh  generate_monitor_reports.py  install_benchmark_extras.sh  install_gpu_extras.sh  prepare_fea_eval_harness.sh  run_execution_pilot.py  run_fea_gold_eval.sh  run_fea_prediction_openai.sh  run_pilot.py  run_swe_lite_gold_eval.sh  setup_local_env.sh  start_vllm_server.sh
slurm/: gpu_smoke_test.sbatch  run_execution_pilot.sbatch  run_fea_gold_eval.sbatch  run_fea_prediction_openai.sbatch  run_monitor_pilot.sbatch  run_openai_monitor_pilot.sbatch  run_swe_lite_gold_eval.sbatch  start_vllm_server.sbatch
src/agents/: __init__.py  openai_agent.py
src/benchmarks/: __init__.py  tasks.py
src/eval/: assumptions.py
src/monitoring/: __init__.py  backends.py  prompts.py  review.py  schema.py
tests/: test_monitor_schema.py
(+1 files in other folders)
